quick-fix - aligning the trigger menu on top of the input schema button

--- a/src/client/app/flogo.flows.detail/components/canvas.component.less
+++ b/src/client/app/flogo.flows.detail/components/canvas.component.less
@@ -53,7 +53,7 @@
 
   .flogo-flows-flow-schema-container {
     padding: 20px 0 22px 22px;
-    z-index: 2;
+    z-index: 1;
   }
 
   .flogo-flows-diagram-container {
